[package]
name = "download-weibo-image"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.64"
async-channel = "1.7.1"
chrono = "0.4.22"
clap = { version = "3.2.20", features = ["derive"] }
dotenvy = "0.15.3"
futures-core = "0.3.24"
futures-util = "0.3.24"
indicatif = "0.17.0"
reqwest = { version = "0.11.11", features = ["json"] }
serde = { version = "1.0.144", features = ["derive"] }
serde-this-or-that = "0.4.0"
tokio = { version = "1.21.0", features = ["full"] }
